--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "bcrypt": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
